tests/Errors/Generic/Files/ByteOrderMark/Found.php
<html lang="en">
<body>
<p>This file begins with a Byte Order Mark (BOM).</p>
</body>
</html>
